snap_add_headers(
        fixed_string.hpp
        inplace_vector.hpp
        numbers.hpp
        span.hpp
)

add_subdirectory(bit)
add_subdirectory(concepts)
add_subdirectory(debugging)
add_subdirectory(expected)
add_subdirectory(functional)
add_subdirectory(internal)
add_subdirectory(memory)
add_subdirectory(meta)
add_subdirectory(numeric)
add_subdirectory(type_traits)
add_subdirectory(utility)
